--- a/.github/workflows/master_konectchat.yml
+++ b/.github/workflows/master_konectchat.yml
@@ -24,19 +24,25 @@ jobs:
       - name: npm install, build, and test
         run: |
           cd frontend
-          pwd
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd frontend
+          echo "Current directory:"
+          pwd
+          zip -r frontend.zip .
+          echo "Artifact created and zipped in frontend directory."
+      
+      - name: Move artifact to root directory
+        run: mv ./frontend/frontend.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: frontend.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,7 +60,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip frontend.zip
       
       - name: Login to Azure
         uses: azure/login@v1
